# boopgrad

./: LICENSE  README.md  pyproject.toml  requirements-dev.txt
boopgrad/: helpers.py  tensor.py
boopgrad/metal/: test.py
docs/: structure.md  tensor.md
